@@ -44,6 +44,7 @@
 	$DB_ADMINS = $DB_DIR.'/admins';
 	$DB_NEWS = $DB_DIR.'/news';
 	$DB_LOCK_FILE = '/dev/shm/suadb_lock';
+	$DB_EVENTHANDLER_STOP_FILE = '/dev/shm/stop_eventhandler';
 	$EVENTHANDLER_INTERVAL = 30;
 	$THS_HTML = '&nbsp;';
 	$THS_UTF8 = "\xc2\xa0";
@@ -97,6 +98,7 @@
 	define('DB_ADMINS', $DB_ADMINS);
 	define('DB_NEWS', $DB_NEWS);
 	define('DB_LOCK_FILE', $DB_LOCK_FILE);
+	define('DB_EVENTHANDLER_STOP_FILE', $DB_EVENTHANDLER_STOP_FILE);
 	define('EVENTHANDLER_INTERVAL', $EVENTHANDLER_INTERVAL);
 	define('THS_HTML', $THS_HTML);
 	define('THS_UTF8', $THS_UTF8);
